<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".show_profile">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_account_circle_24_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/profile_image"/>

    <TextView
        android:id="@+id/name_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_below="@id/profile_image"
        android:layout_marginTop="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="15dp"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_marginTop="50dp"
        android:layout_toEndOf="@id/name_tag"
        android:hint="@string/user_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bal_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance_tag"
        android:layout_below="@id/name_tag"
        android:layout_marginTop="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="15dp"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/user_bal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@id/bal_tag"
        android:hint="@string/balance"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/send_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:background="@drawable/btnstyle"
        android:text="@string/send_money"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>