<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".splashScreen">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bank_icon"
        android:layout_marginTop="220dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp"
        android:fontFamily="@font/alatsi"
        android:text="@string/basic_banking"
        android:textColor="#354D5A"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by"
        android:textColor="#1E1D1D"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/maintext"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vijay"
        android:layout_alignParentBottom="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/maintext"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textColor="#5e889e"/>

</RelativeLayout>