<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

            <Button
                android:id="@+id/show_ll_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_all_users"
                android:layout_margin="15sp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/btnstyle"/>

            <Button
                android:id="@+id/create_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_transaction"
                android:layout_margin="15sp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/btnstyle"
                android:layout_below="@id/show_ll_users"/>

            <Button
            android:id="@+id/show_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_transaction_history"
            android:layout_margin="15sp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@drawable/btnstyle"
            android:layout_below="@id/create_transaction"/>


    </RelativeLayout>

</RelativeLayout>